--- a/cats type/Base.lproj/Main.storyboard
+++ b/cats type/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="17A365" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="cats_type" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,146 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="KWH-I1-AFf">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" red="0.87869550818882469" green="0.86108885346214892" blue="0.83684865579430279" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="KTN-es-Kkz">
+                                    <size key="itemSize" width="151" height="144"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="20" minY="20" maxX="10" maxY="10"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="pxa-Dv-xEx" customClass="catsvcell" customModule="cats_type" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="20" width="151" height="144"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="151" height="144"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="1." translatesAutoresizingMaskIntoConstraints="NO" id="ecz-bd-g8j">
+                                                    <rect key="frame" x="8" y="0.0" width="135" height="111"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAY-gY-4Ad">
+                                                    <rect key="frame" x="8" y="119" width="135" height="25"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="0.90535204690847904" green="0.85509939099978616" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="ecz-bd-g8j" firstAttribute="leading" secondItem="pxa-Dv-xEx" secondAttribute="leading" constant="8" id="Kj2-nC-Rgx"/>
+                                            <constraint firstItem="ecz-bd-g8j" firstAttribute="top" secondItem="pxa-Dv-xEx" secondAttribute="top" id="RFh-yM-hY3"/>
+                                            <constraint firstAttribute="trailing" secondItem="ecz-bd-g8j" secondAttribute="trailing" constant="8" id="ttB-sn-rxf"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="catimage2" destination="ecz-bd-g8j" id="Ihh-nY-pj8"/>
+                                            <outlet property="catsname" destination="cAY-gY-4Ad" id="bzI-Hn-kyv"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="bPJ-Ug-Ssw"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="oaG-XC-MDS"/>
+                                    <outlet property="prefetchDataSource" destination="BYZ-38-t0r" id="Ifx-pj-FGF"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="KWH-I1-AFf" secondAttribute="trailing" id="FYY-ez-PPe"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="KWH-I1-AFf" secondAttribute="bottom" id="JEB-dk-SPY"/>
+                            <constraint firstItem="KWH-I1-AFf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="WPX-k0-Pap"/>
+                            <constraint firstItem="KWH-I1-AFf" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="sZD-wg-YbM"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="cvlistofcats" destination="KWH-I1-AFf" id="OAH-iW-6O1"/>
+                        <segue destination="XbR-6f-7gI" kind="show" identifier="showdetails" id="kfu-ki-Zgz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="24.800000000000001" y="32.833583208395808"/>
+        </scene>
+        <!--Ccatsdetails-->
+        <scene sceneID="dLp-w9-gcp">
+            <objects>
+                <viewController id="XbR-6f-7gI" customClass="VCcatsdetails" customModule="cats_type" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="4f4-d7-mDB"/>
+                        <viewControllerLayoutGuide type="bottom" id="aKc-ei-zPn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fUk-ud-CPp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="1." translatesAutoresizingMaskIntoConstraints="NO" id="soa-nW-riO">
+                                <rect key="frame" x="85" y="129" width="204" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="2Vl-4l-xcu"/>
+                                    <constraint firstAttribute="height" constant="200" id="g1t-sa-y59"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tcb-7u-GrM">
+                                <rect key="frame" x="85" y="350" width="204" height="44"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ibP-m4-UTI">
+                                <rect key="frame" x="31" y="427" width="313" height="192"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EeS-RN-Ki5">
+                                <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                                <items>
+                                    <navigationItem id="ql0-mO-f5g">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="awb-g4-Qgl">
+                                            <connections>
+                                                <action selector="back2:" destination="XbR-6f-7gI" id="LNr-He-25C"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="soa-nW-riO" secondAttribute="trailing" constant="70" id="4Jc-xN-jT1"/>
+                            <constraint firstItem="aKc-ei-zPn" firstAttribute="top" secondItem="ibP-m4-UTI" secondAttribute="bottom" constant="48" id="6pA-Ne-aCL"/>
+                            <constraint firstItem="soa-nW-riO" firstAttribute="leading" secondItem="fUk-ud-CPp" secondAttribute="leadingMargin" constant="69" id="7I9-vX-LP3"/>
+                            <constraint firstItem="tcb-7u-GrM" firstAttribute="trailing" secondItem="soa-nW-riO" secondAttribute="trailing" id="9uI-9n-kv3"/>
+                            <constraint firstItem="EeS-RN-Ki5" firstAttribute="leading" secondItem="fUk-ud-CPp" secondAttribute="leading" id="B4W-GC-poe"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ibP-m4-UTI" secondAttribute="trailing" constant="15" id="BDJ-4Q-2Ot"/>
+                            <constraint firstItem="tcb-7u-GrM" firstAttribute="leading" secondItem="soa-nW-riO" secondAttribute="leading" id="b3c-KV-7Fm"/>
+                            <constraint firstAttribute="trailing" secondItem="EeS-RN-Ki5" secondAttribute="trailing" id="cHk-vw-wHN"/>
+                            <constraint firstItem="EeS-RN-Ki5" firstAttribute="top" secondItem="4f4-d7-mDB" secondAttribute="bottom" constant="24" id="h9s-S3-yjq"/>
+                            <constraint firstItem="ibP-m4-UTI" firstAttribute="top" secondItem="tcb-7u-GrM" secondAttribute="bottom" constant="33" id="laU-SW-jwT"/>
+                            <constraint firstItem="soa-nW-riO" firstAttribute="top" secondItem="EeS-RN-Ki5" secondAttribute="bottom" constant="41" id="m7m-CF-tvf"/>
+                            <constraint firstItem="ibP-m4-UTI" firstAttribute="leading" secondItem="fUk-ud-CPp" secondAttribute="leadingMargin" constant="15" id="qdn-ou-7hc"/>
+                            <constraint firstItem="tcb-7u-GrM" firstAttribute="top" secondItem="soa-nW-riO" secondAttribute="bottom" constant="21" id="w3T-RK-vNO"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="pcatdes" destination="ibP-m4-UTI" id="y4r-o2-iau"/>
+                        <outlet property="pcatimage" destination="soa-nW-riO" id="4wK-2E-oZ3"/>
+                        <outlet property="pcatname2" destination="tcb-7u-GrM" id="4zj-J6-xyy"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZGa-Jf-3o8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="848.79999999999995" y="32.833583208395808"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="1." width="100" height="100"/>
+    </resources>
 </document>
